--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
 
         <!-- UBICACIÖN -->
 
-        <section class="seccion_ubicacion">
+        <section id="Contacto" class="seccion_ubicacion">
             <br>
             <h1 class="ubicacion1">Estamos donde vos estás</h1>
             <br>
 
             <br>
-            <section class="ubicacion">
+            <div class="ubicacion">
 
-                <section class="mapa">
+                <div class="mapa">
                     <div class="locales">
                         <h2 class="barrio"><b>Todos los días de 8 a 20hrs</b></h2>
                         <h3 class="direccion">Av. Honorio Pueyrredón 663</h3>
@@ -197,7 +197,7 @@
                             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                </section>
+                </div>
 
                 <br>
                 <br>
@@ -218,7 +218,7 @@
                         <h3>11-5000-4000</h3>
                     </div>
                 </div>
-            </section>
+            </div>
         </section>
 
 
