--- a/index.html
+++ b/index.html
@@ -203,18 +203,18 @@
                 <br>
                 <div class="contenedor-contactos">
                     <div class="box-contacto">
-                        <h2>Email</h2>
+                        <h2>Email <i class="fa-regular fa-envelope"></i></h2>
                         <h3>MOLINA@GMAIL.COM</h3>
                     </div>
                     <br><br><br>
                     <div class="box-contacto">
-                        <h2>Instagram</h2>
+                        <h2>Instagram <i class="fa-brands fa-instagram"></i></h2>
                         <a href="https://www.instagram.com/molinapanaderiacafe/?hl=es"
                             target="_blank">/MOLINAPANADERIACAFE</a>
                     </div>
                     <br><br><br>
                     <div class="box-contacto">
-                        <h2>Teléfono</h2>
+                        <h2>Teléfono <i class="fa-solid fa-phone"></i></h2>
                         <h3>11-5000-4000</h3>
                     </div>
                 </div>
