Actualizo seccion UBICACION

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Parisienne&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/004445635d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -178,48 +179,49 @@
 
         </section>
 
-        <!-- UBICACIÖN -->
+    </section>
 
-        <section id="Contacto" class="seccion_ubicacion">
-            <br>
-            <h1 class="ubicacion1">Estamos donde vos estás</h1>
-            <br>
+    <!-- UBICACIÖN -->
 
-            <br>
-            <div class="ubicacion">
+    <section class="seccion_ubicacion">
+        <br>
+        <h1 class="ubicacion1">Estamos donde vos estás</h1>
+        <br>
+        <br>
+        <br>
+        <section class="ubicacion">
 
-                <div class="mapa">
-                    <div class="locales">
-                        <h2 class="barrio"><b>Todos los días de 8 a 20hrs</b></h2>
-                        <h3 class="direccion">Av. Honorio Pueyrredón 663</h3>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.6794546082983!2d-58.44390038417465!3d-34.61226626545864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca151ff35103%3A0x3ec1a338aa06d449!2sAv.%20Dr.%20Honorio%20Pueyrred%C3%B3n%20663%2C%20C1405BAD%20CABA!5e0!3m2!1ses!2sar!4v1665947848828!5m2!1ses!2sar"
-                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
+            <section class="mapa">
+                <div class="locales">
+                    <h2 class="barrio"><b>Todos los días de 8 a 20hrs</b></h2>
+                    <h3 class="direccion">Av. Honorio Pueyrredón 663</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.6794546082983!2d-58.44390038417465!3d-34.61226626545864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca151ff35103%3A0x3ec1a338aa06d449!2sAv.%20Dr.%20Honorio%20Pueyrred%C3%B3n%20663%2C%20C1405BAD%20CABA!5e0!3m2!1ses!2sar!4v1665947848828!5m2!1ses!2sar"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-
-                <br>
-                <br>
-                <div class="contenedor-contactos">
-                    <div class="box-contacto">
-                        <h2>Email <i class="fa-regular fa-envelope"></i></h2>
-                        <h3>MOLINA@GMAIL.COM</h3>
-                    </div>
-                    <br><br><br>
-                    <div class="box-contacto">
-                        <h2>Instagram <i class="fa-brands fa-instagram"></i></h2>
-                        <a href="https://www.instagram.com/molinapanaderiacafe/?hl=es"
-                            target="_blank">/MOLINAPANADERIACAFE</a>
-                    </div>
-                    <br><br><br>
-                    <div class="box-contacto">
-                        <h2>Teléfono <i class="fa-solid fa-phone"></i></h2>
-                        <h3>11-5000-4000</h3>
-                    </div>
+            </section>
+            
+            <br>
+            <br>
+            <div class="contenedor-contactos">
+                <div class="box-contacto">
+                    <h2>Email <i class="fa-regular fa-envelope"></i></h2>
+                    <h3>MOLINA@GMAIL.COM</h3>
+                </div>
+                <br><br><br>
+                <div class="box-contacto">
+                    <h2>Instagram <i class="fa-brands fa-instagram"></i></h2>
+                    <a href="https://www.instagram.com/molinapanaderiacafe/?hl=es" target="_blank">/MOLINAPANADERIACAFE</a>
+                </div>
+                <br><br><br>
+                <div class="box-contacto">
+                    <h2>Teléfono <i class="fa-solid fa-phone"></i></h2>
+                    <h3>11-5000-4000</h3>
                 </div>
             </div>
         </section>
+    </section>
 
 
 
