Boton para formulario contacto

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
     <!-- UBICACIÖN -->
 
-    <section class="seccion_ubicacion">
+    <section id="Contacto" class="seccion_ubicacion">
         <br>
         <h1 class="ubicacion1">Estamos donde vos estás</h1>
         <br>
@@ -209,16 +209,20 @@
                     <h2>Email <i class="fa-regular fa-envelope"></i></h2>
                     <h3>MOLINA@GMAIL.COM</h3>
                 </div>
-                <br><br><br>
+                <!-- <br><br><br> -->
                 <div class="box-contacto">
                     <h2>Instagram <i class="fa-brands fa-instagram"></i></h2>
                     <a href="https://www.instagram.com/molinapanaderiacafe/?hl=es" target="_blank">/MOLINAPANADERIACAFE</a>
                 </div>
-                <br><br><br>
+                <!-- <br><br><br> -->
                 <div class="box-contacto">
                     <h2>Teléfono <i class="fa-solid fa-phone"></i></h2>
                     <h3>11-5000-4000</h3>
                 </div>
+            </div>
+            <div class="contenedor-footer">
+                <h3>Tenes alguna duda?</h3>
+                <a href="contact.html">Escribinos!</a>
             </div>
         </section>
     </section>
