--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 
 <body>
+
     <!-- Header -->
+
     <header id="encabezado" class="header">
         <div class="logo">
             <img src="recursos/img/Logo2.jpg" alt="">
@@ -39,6 +41,7 @@
     </header>
 
     <!-- Main -->
+
     <main>
 
         <!-- Inicio -->
@@ -70,11 +73,10 @@
             </div>
         </div>
 
-        <br><br>
         <!-- Productos -->
 
         <section id="Productos">
-
+            <br>
             <h1 class="especialidades">Nuestras Especialidades</h1>
 
             <h3>El día continua en Cafetería Molina</h3>
@@ -124,13 +126,7 @@
                         <h3 class="texto">Donas</h3>
                     </div>
                 </div>
-                <!-- <img src="recursos/img/croissant.jpg" alt="Nuestras especialidades en Croissant" class="img2">
-            <div class="esconder2">
-                <div class="texto2">Nuestras especialides en Croissant</div>
-            </div> -->
-
             </div>
-
         </section>
 
 
@@ -171,21 +167,18 @@
                     <h3>Gracias por elegirnos!</h3>
                 </footer>
             </div>
-
         </section>
 
-        </section>
-
-        <!-- UBICACIÖN -->
+        <!-- Ubicacion -->
 
         <section id="Contacto" class="seccion_ubicacion">
             <br>
             <h1 class="ubicacion1">Estamos donde vos estás</h1>
             <br>
             <br>
-            <section class="ubicacion">
+            <div class="ubicacion">
 
-                <section class="mapa">
+                <div class="mapa">
                     <div class="locales">
                         <h2 class="barrio"><b>Todos los días de 8 a 20hrs</b></h2>
                         <h3 class="direccion">Av. Honorio Pueyrredón 663</h3>
@@ -194,7 +187,7 @@
                             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                </section>
+                </div>
 
                 <br>
                 <br>
@@ -203,13 +196,13 @@
                         <h2>Email <i class="fa-regular fa-envelope"></i></h2>
                         <h3>MOLINA@GMAIL.COM</h3>
                     </div>
-                    <!-- <br><br><br> -->
+
                     <div class="box-contacto">
                         <h2>Instagram <i class="fa-brands fa-instagram"></i></h2>
                         <a href="https://www.instagram.com/molinapanaderiacafe/?hl=es"
                             target="_blank">/MOLINAPANADERIACAFE</a>
                     </div>
-                    <!-- <br><br><br> -->
+
                     <div class="box-contacto">
                         <h2>Teléfono <i class="fa-solid fa-phone"></i></h2>
                         <h3>11-5000-4000</h3>
@@ -219,14 +212,13 @@
                     <h3>Tenes alguna duda?</h3>
                     <a href="contact.html">Escribinos!</a>
                 </div>
-            </section>
+            </div>
         </section>
 
 
 
         <!-- Boton Ir Arriba -->
 
-        <!-- <span class="ir_arriba">٨</span> -->
         <button onclick="scroll_arriba()" class="ir_arriba" id="Boton_arriba">٨</button>
 
     </main>
