Estilo titulo productos

--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
         <!-- Productos -->
 
         <section id="Productos">
-            <br>
             <h1 class="especialidades">Nuestras Especialidades</h1>
 
-            <h3>El día continua en Cafetería Molina</h3>
+            <h3 class="h3espec">El día continua en Cafetería Molina</h3>
 
-            <p>Vení y deleitate con nosotros</p>
+            <p class="pespec">Vení y deleitate con nosotros</p>
 
             <div class="container-especialidades">
 
