Boton Volver en contacto

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,8 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="contact_recursos/vendor/select2/select2.min.css">
 <!--===============================================================================================-->
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="contact_recursos/css/util.css">
 	<link rel="stylesheet" type="text/css" href="contact_recursos/css/main.css">
 <!--===============================================================================================-->
@@ -25,6 +27,9 @@
 
 	<div class="contact1">
 		<div class="container-contact1">
+
+			<a href="index.html" class="btnvolver">Volver</a>
+
 			<div class="contact1-pic js-tilt" data-tilt>
 				<img src="contact_recursos/images/img-01.png" alt="IMG">
 			</div>
