--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <!-- Reseñas -->
 
         <section id="Reseñas">
-            <div class="contenedor">
+            <div class="conte">
                 <header class="encabezado" style="background-color: chocolate">
                     <h2>Algunas opiniones de nuestros clientes</h2>
                 </header>
