--- a/contact.html
+++ b/contact.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>Café Molina - Contacto</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="contact_recursos/images/icons/favicon.ico"/>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="contact_recursos/images/icons/favicon.ico" />
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="contact_recursos/vendor/bootstrap/css/bootstrap.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="contact_recursos/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="contact_recursos/vendor/animate/animate.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="contact_recursos/vendor/css-hamburgers/hamburgers.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="contact_recursos/vendor/select2/select2.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="contact_recursos/css/util.css">
 	<link rel="stylesheet" type="text/css" href="contact_recursos/css/main.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 </head>
+
 <body>
 
 	<div class="contact1">
 		<div class="container-contact1">
 
-			<a href="index.html" class="btnvolver">Volver</a>
+			<!-- <a href="index.html" class="btnvolver">Volver</a> -->
 
 			<div class="contact1-pic js-tilt" data-tilt>
 				<img src="contact_recursos/images/img-01.png" alt="IMG">
@@ -39,33 +41,37 @@
 					Escribinos!
 				</span>
 
-				<div class="wrap-input1 validate-input" data-validate = "Se requiere un nombre para continuar">
+				<div class="wrap-input1 validate-input" data-validate="Se requiere un nombre para continuar">
 					<input class="input1" type="text" name="name" placeholder="Nombre">
 					<span class="shadow-input1"></span>
 				</div>
 
-				<div class="wrap-input1 validate-input" data-validate = "Se requiere un mail válido: ex@abc.xyz">
+				<div class="wrap-input1 validate-input" data-validate="Se requiere un mail válido: ex@abc.xyz">
 					<input class="input1" type="text" name="email" placeholder="Email">
 					<span class="shadow-input1"></span>
 				</div>
 
-				<div class="wrap-input1 validate-input" data-validate = "De qué tema nos querés hablar?">
+				<div class="wrap-input1 validate-input" data-validate="De qué tema nos querés hablar?">
 					<input class="input1" type="text" name="subject" placeholder="Asunto">
 					<span class="shadow-input1"></span>
 				</div>
 
-				<div class="wrap-input1 validate-input" data-validate = "Escribinos tu mensaje para continuar!">
+				<div class="wrap-input1 validate-input" data-validate="Escribinos tu mensaje para continuar!">
 					<textarea class="input1" name="message" placeholder="Qué nos querés contar?"></textarea>
 					<span class="shadow-input1"></span>
 				</div>
 
 				<div class="container-contact1-form-btn">
+
+					<a href="index.html" class="contact1-form-btn" style="background-color: red">Cerrar</a>
+
 					<button class="contact1-form-btn">
 						<span>
 							Send Email
 							<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
 						</span>
 					</button>
+
 				</div>
 			</form>
 		</div>
@@ -74,33 +80,34 @@
 
 
 
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="contact_recursos/vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="contact_recursos/vendor/bootstrap/js/popper.js"></script>
 	<script src="contact_recursos/vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="contact_recursos/vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="contact_recursos/vendor/tilt/tilt.jquery.min.js"></script>
-	<script >
+	<script>
 		$('.js-tilt').tilt({
 			scale: 1.1
 		})
 	</script>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-  gtag('config', 'UA-23581568-13');
-</script>
+		gtag('config', 'UA-23581568-13');
+	</script>
 
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="contact_recursos/js/main.js"></script>
 
 </body>
+
 </html>
