Agrego API, uso los datos de los nombres para las reseñas

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Parisienne&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/004445635d.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
 </head>
 
 <body>
@@ -141,24 +142,22 @@
 
                 </aside>
                 <div class="opinion1">
-                    <p>Entorno agradable, excelente servicio y el mejor café de la zona, felicitaciones. <br><br>Juan de
-                        los Palotes</p>
+                    <p>Entorno agradable, excelente servicio y el mejor café de la zona, felicitaciones. <br><br><span id="nombre1"></span></p>
                 </div>
                 <div class="opinion2">
-                    <p>Muy buena atención y predisposición, recomendable. <br><br>Rosario Molina</p>
+                    <p>Muy buena atención y predisposición, recomendable. <br><br><span id="nombre2"></span></p>
                 </div>
                 <div class="opinion3">
-                    <p>Las tortas que se comen en este lugar no tienen parangón. No se lo pierdan. <br><br> Juan Domingo
-                        Verón</p>
+                    <p>Las tortas que se comen en este lugar no tienen parangón. No se lo pierdan. <br><br> <span id="nombre3"></span></p>
                 </div>
                 <div class="opinion4">
-                    <p>Un clásico en el barrio al que vuelvo siempre.<br><br> Brad Pitt</p>
+                    <p>Un clásico en el barrio al que vuelvo siempre.<br><br> <span id="nombre4"></span></p>
                 </div>
                 <div class="opinion5">
-                    <p>Prueben el café brasilero, definitivamente el mejor.<br><br> Jodie Foster</p>
+                    <p>Prueben el café brasilero, definitivamente el mejor.<br><br><span id="nombre5"></span></p>
                 </div>
                 <div class="opinion6">
-                    <p>Buena relación precio calidad.<br><br> Los duques de Hazard</p>
+                    <p>Buena relación precio calidad.<br><br> <span id="nombre6"></span></p>
                 </div>
 
 
@@ -215,7 +214,6 @@
         </section>
 
 
-
         <!-- Boton Ir Arriba -->
 
         <button onclick="scroll_arriba()" class="ir_arriba" id="Boton_arriba">٨</button>
@@ -223,6 +221,7 @@
     </main>
     <script src="recursos/js/header.js"></script>
     <script src="recursos/js/arriba.js"></script>
+    <script src="recursos/js/api.js"></script>
 </body>
 
 </html>
